// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline empty with single root transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with a functional ptransform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform_3",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PBegin_PBegin_7",
            ],
          ],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKHBjb2xsKSB7IHJldHVybiBwY29sbDsgfQ==",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with create and print 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_14",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_18",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_9",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_11",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_16",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_20",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_12",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_12",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
      Array [
        "ref_PCollection_PCollection_21",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_21",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_Create_3",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create/FlatMap/ParDo_17",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_21",
            ],
          ],
          "spec": Object {
            "payload": "Cj8KF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGiRmdW5jdGlvbiAoKSB7IHJldHVybiBfdGhpcy52YWx1ZXM7IH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "Create/FlatMap/ParDo",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create/FlatMap_13",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_21",
            ],
          ],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKGlucHV0KSB7CiAgICAgICAgcmV0dXJuIGlucHV0LmFwcGx5KHBhcmRvXzEuUGFyRG8sIHsKICAgICAgICAgICAgZG9GbjogbmV3IGRvZm5fMS5DYWxsYWJsZVdyYXBwZXJEb0ZuKHRoaXMuZnVuYykKICAgICAgICB9KTsKICAgIH0=",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_Create/FlatMap/ParDo_17",
          ],
          "uniqueName": "Create/FlatMap",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create/Impulse_8",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_7",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "spec": Object {
            "payload": "",
            "urn": "beam:transform:impulse:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "Create/Impulse",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_21",
            ],
          ],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKGlucHV0KSB7CiAgICAgICAgdmFyIF90aGlzID0gdGhpczsKICAgICAgICByZXR1cm4gaW5wdXQuYXBwbHkoaW1wdWxzZV8xLkltcHVsc2UpLmFwcGx5KGZsYXRtYXBfMS5GbGF0TWFwLCB7CiAgICAgICAgICAgIGZ1bmM6IGZ1bmN0aW9uICgpIHsgcmV0dXJuIF90aGlzLnZhbHVlczsgfQogICAgICAgIH0pOwogICAgfQ==",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_Create/Impulse_8",
            "ref_AppliedPTransform_Create/FlatMap_13",
          ],
          "uniqueName": "Create",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_10",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_15",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_19",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with custom ptransform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_10",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_15",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_12",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_17",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_18",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_18",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
      Array [
        "ref_PCollection_PCollection_8",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_8",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_test_3",
            "ref_AppliedPTransform_custom transform_9",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform/nested subtransform 1_14",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_13",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_18",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform/nested subtransform 1",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_9",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_18",
            ],
          ],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKHBjb2xsKSB7CiAgICAgICAgICAgICAgICByZXR1cm4gcGNvbGwuYXBwbHkoaW5kZXhfMS5QYXJEbywgeyBkb0ZuOiBuZXcgaW5kZXhfMS5Eb0ZuKCksIGxhYmVsOiAibmVzdGVkIHN1YnRyYW5zZm9ybSAxIiB9KTsKICAgICAgICAgICAgfQ==",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform/nested subtransform 1_14",
          ],
          "uniqueName": "custom transform",
        },
      ],
      Array [
        "ref_AppliedPTransform_test_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "test",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_11",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_16",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with multiple subtransforms 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_10",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_15",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_20",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_25",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_12",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_17",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_22",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_27",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_13",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_13",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
      Array [
        "ref_PCollection_PCollection_18",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_18",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
      Array [
        "ref_PCollection_PCollection_23",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_23",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
      Array [
        "ref_PCollection_PCollection_28",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_28",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
      Array [
        "ref_PCollection_PCollection_8",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_8",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_A_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "A",
        },
      ],
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_A_3",
            "ref_AppliedPTransform_B-1_9",
            "ref_AppliedPTransform_C-1_14",
            "ref_AppliedPTransform_B-2_19",
            "ref_AppliedPTransform_C-2_24",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_B-1_9",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_13",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "B-1",
        },
      ],
      Array [
        "ref_AppliedPTransform_B-2_19",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_23",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "B-2",
        },
      ],
      Array [
        "ref_AppliedPTransform_C-1_14",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_13",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_18",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "C-1",
        },
      ],
      Array [
        "ref_AppliedPTransform_C-2_24",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_23",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_28",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "C-2",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_11",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_16",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_21",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_26",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with one transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_8",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_8",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom label_3",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom label_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "spec": Object {
            "payload": "CngKF2JlYW06ZG9mbjpqYXZhc2NyaXB0OnYxGl1mdW5jdGlvbiAoX2VsZW1lbnQpIHsKICAgICAgICB0aHJvdyBuZXcgRXJyb3IoJ05lZWRzIHRvIGJlIGltcGxlbWVudGVkIGluIHN1YmNsYXNzZXMnKTsKICAgIH0=",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom label",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with ptransform with impulse 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_9",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_11",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_12",
        Object {
          "coderId": "ref_BytesCoder_BytesCoder_4",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_12",
          "windowingStrategyId": "ref_Windowing_Windowing_5",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform_3",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform/Impulse_8",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_7",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "spec": Object {
            "payload": "",
            "urn": "beam:transform:impulse:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform/Impulse",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKHBjb2xsKSB7CiAgICAgICAgICAgICAgICByZXR1cm4gcGNvbGwuYXBwbHkoaW5kZXhfMS5JbXB1bHNlKTsKICAgICAgICAgICAgfQ==",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform/Impulse_8",
          ],
          "uniqueName": "custom transform",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_10",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with ptransform with nothing 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_4",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_6",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [
      Array [
        "ref_ExternalEnvironment_ExternalEnvironment_2",
        Object {
          "capabilitiesList": Array [
            "beam:coder:bytes:v1",
            "beam:version:sdk_base:apache/beam_javascript_sdk:2.23.0.dev",
          ],
          "dependenciesList": Array [],
          "displayDataList": Array [],
          "payload": "ChAKDmxvY2FsaG9zdDo4MDgw",
          "urn": "beam:env:external:v1",
        },
      ],
    ],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKF9pbnB1dCkgewogICAgICAgIHRocm93IG5ldyBFcnJvcigiTXVzdCBiZSBpbXBsZW1lbnRlZCBieSBzdWJjbGFzc2VzIik7CiAgICB9",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform_3",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_3",
        Object {
          "displayDataList": Array [],
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PBegin_PBegin_7",
            ],
          ],
          "spec": Object {
            "payload": "ZnVuY3Rpb24gKHBjb2xsKSB7CiAgICAgICAgICAgICAgICByZXR1cm4gcGNvbGw7CiAgICAgICAgICAgIH0=",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_5",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "ref_ExternalEnvironment_ExternalEnvironment_2",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "ref_BytesCoder_BytesCoder_4",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;
